2005-10-10  Vince Darley <vincentdarley@users.sourceforge.net>

	* doc/text.n
	* generic/tkText.c
	* generic/tkText.h
	* generic/tkTextBTree.c
	* generic/tkTextDisp.c
	* generic/tkTextImage.c
	* generic/tkTextIndex.c
	* generic/tkTextMark.c
	* generic/tkTextTag.c
	* generic/tkTextWind.c
	* macosx/tkMacOSXDefault.h
	* tests/text.test
	* tests/textDisp.test
	* unix/tkUnixDefault.h
	* win/tkWinDefault.h: Implementation of TIP#256, adding a new
	text widget configuration option '-tabstyle', with new tests
	and documentation.

	Also a fix for [Bug 1281228] (documentation and full implementation
	of -strictlimits), and [Bug 1288677] (corrected elide behaviour),
	again with more tests.

2005-10-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/dialog.tcl (::tk_dialog): add tkwait visibility before
	grab. [Bug 1216775]

	* win/tkWinDialog.c (ChooseDirectoryValidateProc): reset stored
	path to "" if it doesn't exist and -mustexist is true. [Bug 1309218]
	Remove old-style dir chooser (no longer used).

	* macosx/tkMacOSXInt.h: add MODULE_SCOPE definition check for
	extension writers that access private headers on OS X and don't
	define it in configure.

2005-09-28  Don Porter	<dgp@users.sourceforge.net>

	* unix/tkUnixPort.h:	Disabled inclusion of the private Tcl header
	* win/tkWinPort.h:	file tclInt.h.  Tk ought to have a tiny and
	shrinking number of calls of private Tcl routines.  Each Tk source
	file doing this should follow the convention in the macosx port and
	have its own #include "tclInt.h".

	* generic/tkEvent.c:	Disabled calls to private Tcl routine
	TclInExit().  See comment in TkCreateExitHandler() for full rationale.

2005-09-21  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkEvent.c (TkCreateThreadExitHandler, TkFinalizeThread)
	(TkDeleteThreadExitHandler): New internal API (from Joe Mistachkin)
	to allow Tk to finalize itself correctly in a multi-threaded
	environment. [Bug 749908]

2005-09-14  Donal K. Fellows  <dkf@users.sf.net>
